--- a/.github/workflows/build-storybook.yml
+++ b/.github/workflows/build-storybook.yml
@@ -13,5 +13,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Build Storybook
         run: pnpm run build-storybook
+      - name: Upload Static Storybook artifact
+        uses: actions/upload-artifact@v3
+        with:
+            name: Static Storybook
+            path: storybook-static
       - name: Finished
         run: echo "Build Finished"
