--- a/.github/workflows/build-storybook.yml
+++ b/.github/workflows/build-storybook.yml
@@ -12,13 +12,13 @@ jobs:
       - name: Get Repo code
         uses: actions/checkout@v3
       - name: Install Dependencies
-        run: pnpm i
+        run: npm ci
       - name: Build Storybook
-        run: pnpm run build-storybook
+        run: npm run build-storybook
       - name: Upload Static Storybook artifact
         uses: actions/upload-artifact@v3
         with:
-            name: Static Storybook
-            path: storybook-static
+          name: Static Storybook
+          path: storybook-static
       - name: Finished
         run: echo "Build Finished"
