--- a/.github/workflows/build-storybook.yml
+++ b/.github/workflows/build-storybook.yml
@@ -11,10 +11,12 @@ jobs:
     steps:
       - name: Get Repo code
         uses: actions/checkout@v3
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2.4.0
       - name: Install Dependencies
-        run: npm ci
+        run: pnpm install
       - name: Build Storybook
-        run: npm run build-storybook
+        run: pnpm run build-storybook
       - name: Upload Static Storybook artifact
         uses: actions/upload-artifact@v3
         with:
