--- a/.github/workflows/build-storybook.yml
+++ b/.github/workflows/build-storybook.yml
@@ -13,6 +13,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup pnpm
         uses: pnpm/action-setup@v2.4.0
+        with:
+          version: 6.16.0
       - name: Install Dependencies
         run: pnpm install
       - name: Build Storybook
