--- a/.github/workflows/build-storybook.yml
+++ b/.github/workflows/build-storybook.yml
@@ -26,3 +26,24 @@ jobs:
           path: storybook-static
       - name: Finished
         run: echo "Build Finished"
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    steps:
+      - name: Get Static Storybook artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: Static Storybook
+          path: storybook-static
+      - name: Configure S3 credentials
+        uses: aws-actions/configure-aws-credentials@v4.0.2
+        with:
+          aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-2
+      - name: Deploy to S3
+        run: aws s3 sync storybook-static/ s3://ui-library-strorybook
+
